--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "vite": "^4.3.9"
   },
   "dependencies": {
+    "@studio-freight/lenis": "^1.0.16",
     "@types/three": "^0.152.1",
     "lil-gui": "^0.18.2",
     "three": "^0.154.0"
