--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   },
   "devDependencies": {
     "typescript": "^5.0.2",
-    "vite": "^4.3.9"
+    "vite": "^4.3.9",
+    "vite-plugin-gltf": "^3.1.0"
   },
   "dependencies": {
     "@studio-freight/lenis": "^1.0.16",
