--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "@studio-freight/lenis": "^1.0.16",
     "@types/three": "^0.152.1",
+    "gsap": "^3.12.2",
     "lil-gui": "^0.18.2",
     "three": "^0.154.0"
   }
