--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "preview": "vite preview --port 8080"
   },
   "devDependencies": {
+    "glslify-loader": "^2.0.0",
+    "raw-loader": "^4.0.2",
     "typescript": "^5.0.2",
     "vite": "^4.3.9",
     "vite-plugin-gltf": "^3.1.0"
@@ -18,6 +20,7 @@
     "@types/three": "^0.152.1",
     "gsap": "^3.12.2",
     "lil-gui": "^0.18.2",
-    "three": "^0.154.0"
+    "three": "^0.154.0",
+    "vite-raw-plugin": "^1.0.2"
   }
 }
