--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "glslify-loader": "^2.0.0",
     "raw-loader": "^4.0.2",
     "typescript": "^5.0.2",
-    "vite": "^4.3.9",
+    "vite": "^5.4.10",
     "vite-plugin-gltf": "^3.1.0"
   },
   "dependencies": {
@@ -23,6 +23,7 @@
     "lil-gui": "^0.18.2",
     "three": "^0.154.0",
     "vite-plugin-glsl": "^1.1.2",
+    "vite-plugin-static-copy": "^2.0.0",
     "vite-raw-plugin": "^1.0.2"
   }
 }
