--- a/package.json
+++ b/package.json
@@ -19,9 +19,13 @@
     "@studio-freight/lenis": "^1.0.42",
     "@types/three": "^0.152.1",
     "glsl-noise": "^0.0.0",
+    "glsl-random": "^0.0.5",
+    "glslify": "^7.1.1",
     "gsap": "^3.12.2",
     "lil-gui": "^0.18.2",
     "three": "^0.154.0",
+    "vite-plugin-glsl": "^1.3.0",
+    "vite-plugin-glslify": "^2.1.0",
     "vite-plugin-static-copy": "^2.0.0",
     "vite-raw-plugin": "^1.0.2"
   }
